manifests/render/hello-kubernetes/templates/service.yaml
---
# Source: hello-kubernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-release-name
  labels:
    app.kubernetes.io/name: hello-kubernetes
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.10"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hello-kubernetes
    app.kubernetes.io/instance: release-name
